src/components/home/Hero/Hero.css
.hero-sec {
  display: flex;
  align-items: center;
  height: 100%;
  gap: 2rem;
}

.hero-sec__headline {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: flex-start;
  gap: 2rem;
  max-width: 35rem;
}

.hero-sec__headline h1 {
  line-height: 4rem;
  color: aliceblue;
}

.hero-sec__headline p {
  font-size: 1.125rem;
  line-height: 1.6;
  color: aliceblue;
}

.hero-sec__headline a {
  display: flex;
  align-items: center;
  font-size: 1.25rem;
  color: var(--color-aqua);
  text-decoration: none;
}

.hero-sec__headline a span {
  display: flex;
  align-items: center;
  margin-left: 0.5rem;
  transition: transform 300ms ease;
}

.hero-sec__headline a:hover span {
  transform: rotate(90deg);
}

.hero-sec__image {
  position: relative;
  max-width: 400px;
  flex-shrink: 0;
  transition: filter 300ms ease;
}

.hero-sec__image:hover {
  filter: drop-shadow(var(--shadow-aqua));
}

.hero-sec__dot {
  position: absolute;
  bottom: 170.3px;
  left: 174px;
  font-size: 30px;
  color: var(--color-aqua);
  text-shadow: 5px -2px 1px rgba(0, 0, 0, 0.13);
  animation: blink 1s infinite;
  z-index: 10;
}

@keyframes blink {
  0%,
  50% {
    opacity: 1;
  }
  50.01%,
  100% {
    opacity: 0;
  }
}

@media (max-width: 1024px) {
  .hero-sec__headline {
    gap: 1.5rem;
    max-width: 100%;
  }

  .hero-sec__headline h1 {
    line-height: 2.5rem;
  }

  .hero-sec__headline p {
    font-size: 1rem;
    line-height: 1.3;
  }

  .hero-sec__headline a {
    font-size: 1.125rem;
  }

  .hero-sec__image {
    max-width: 300px;
  }
}

@media (max-width: 767px) {
  .hero-sec {
    flex-direction: column;
    align-items: center;
    justify-content: center;
    gap: 2rem;
  }

  .hero-sec__headline {
    gap: 1.5rem;
    max-width: 100%;
    order: 1;
  }

  .hero-sec__headline h1 {
    font-size: 2.5rem;
    line-height: 2.5rem;
  }

  .hero-sec__headline p {
    font-size: 1rem;
    line-height: 1.3;
  }

  .hero-sec__headline a {
    font-size: 1.125rem;
  }

  .hero-sec__image {
    max-width: 250px;
  }
}

